--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : ""
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "sea.png"
   name             : "HaiYang Li"
   pronouns         : # example: "she/her"  
   bio              : "SAP BASIS 技术顾问"
