--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ repository               : ""
 author:
   # Biographic information
   avatar           : "sea.png"
-  name             : "HaiYang Li"
+  name             : "李海洋"
   pronouns         : # example: "she/her"  
   bio              : "SAP BASIS 技术顾问"
   location         : "ZhenJiang, China"
